--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ models_hybrid_v5
 data
 01 改變日期切分，並取消buy agent 驗證的類別平衡
 02 預設值改為 Sell Threshold  0_6 Buy Consensus Threshold 0_5
+03 (not in use) Smart Filter and Buy Consensus Veto
+04 只有在 Buy Agent 建議為 BUY 且信心夠強時才阻止賣出
